Added scripts to get data, added details for first notebook

--- a/notebooks/test_your_env.ipynb
+++ b/notebooks/test_your_env.ipynb
@@ -7,7 +7,9 @@
    "outputs": [],
    "source": [
     "print(\"Make sure you are using the correct python kernel in venv/bin/python3\")\n",
-    "print(\"If you import a package, add it to uv with uv add, then import into the notebook\")"
+    "print(\n",
+    "    \"If you import a package, add it to uv with uv add, then import into the notebook\"\n",
+    ")"
    ]
   }
  ],
